# simple-CPP-logging

./: CMakeLists.txt  README.md  logging.cpp  logging.h  main.cpp
